# xfeats_dyn

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg
apps/: inference.py
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: dataset.ipynb  model.ipynb  segmentation.ipynb
xfeats_dyn/: __init__.py  config.py  dataset.py  features.py  plots.py
xfeats_dyn/modeling/: model.py  predict.py  train.py
